[package]
name = "injector-controller"
version = "0.1.0"
edition = "2021"

[dependencies]
kube = { version = "0.73.0", features = ["runtime", "derive", "admission"] }
k8s-openapi = { version = "0.15.0", features = ["v1_23"] }
tokio = { version = "1", features = ["full"] }
warp = { version = "0.3", features = ["tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json-patch = "0.2.6"
futures = "0.3"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.2"
